--- a/_css/screen.css
+++ b/_css/screen.css
@@ -12,23 +12,24 @@ body>footer{border-top:4px solid #ddd;margin-top:20px;padding:10px 0;}
 body{background-color:#fff;color:#333;font:14px/20px 'Cantarell',sans-serif;margin:20px;overflow-y:scroll !important;text-rendering:optimizelegibility;}
 a{color:#26a;text-decoration:none;}
 a:hover{color:#0e4071;}
-h1{font-size:48px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;}
-h2{font-size:24px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;}
-h3{font-size:20px;font-weight:bold;line-height:1em;margin:0;padding:0 0 20px 0;padding-bottom:5px;border-bottom:1px solid #ddd;font-weight:bold;}
+h1{font-size:26px;font-weight:bold;line-height:1em;margin:0;padding:5px 0 5px 0;}
+h2{font-size:24px;font-weight:bold;line-height:1em;margin:0;padding:5px 0 5px 0;}
+h3{font-size:20px;font-weight:bold;line-height:1em;margin:0;padding:5px 0 5px 0;padding-bottom:5px;border-bottom:1px solid #ddd;font-weight:bold;}
 h4,h5,h6{font-size:16px;border-bottom:1px solid #ddd;font-weight:normal;}
 pre{padding:0 30px;text-wrap:wrap;white-space:pre-wrap;white-space:-moz-pre-wrap;white-space:-pre-wrap;white-space:-o-pre-wrap;word-wrap:break-word;}
 div.projects>p{padding-bottom:20px;}
 #sitename{float:right;color:#333;font-size:120%;}
 div.highlight{margin:5px;padding:5px;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;}
+article{border-bottom:1px dashed rgba(60, 60, 60, 0.15);margin-bottom:40px;}
 article>header{border-bottom:1px solid #ddd;color:#999;font-size:13px;margin-bottom:20px;padding-bottom:10px;}
-article>header>h2{color:#333;margin:0 0 5px 0;padding:0;}
+article>header>h2{color:#333;margin:0 0 5px 0;}
 article>header>h2>a{color:#333 !important;}
 article img{display:block;margin:10px auto;}
 article>footer{margin-top:20px;}
 article>footer>p,article>footer>span{color:#999;font-size:13px;}
 article>img{border:1px solid #CCC;opacity:.9;filter:alpha(opacity=90);}
 article>img:hover{border-color:#AAA;opacity:1.0;filter:alpha(opacity=100);}
-#like-and-subscribe{display:inline-block;float:right;margin-top:4px;}
+#like-and-subscribe{display:inline-block;float:right;margin-top:0px;}
 .simple{font:13px/18px Menlo,Monaco,'Bitstream Vera Sans Mono','Courier New',monospace;background-color:#eee;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;padding:3px;border:solid #ccc 1px;}
 .project-icon{width:40px;height:40px;padding-right:5px;vertical-align:middle;opacity:.9;filter:alpha(opacity=90);}
 .project-icon:hover{opacity:1.0;filter:alpha(opacity=100);}
